--- a/kap13/kap13.tex
+++ b/kap13/kap13.tex
@@ -1,1 +1,9 @@
 \chapter{Logarithmen}
+
+\begin{Definition}
+\end{Definition}
+
+Hier Graphen
+
+	\section{Eigenschaften}	
+	\section{Rechengesetze}
