--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -581,7 +581,7 @@ $\Rightarrow & T_{x_{0}}(x) &=& f'(x_{0}) \cdot (x-x_{0}) +f(x_{0}) \\ \\
 Jetzt werden die Koordinaten des Punktes $A(0|-4)$, durch den die Tangente auch noch geht, eingesetzt.
 
 \begin{array}{rccl}
-$\Rightarrow & T_{x_{0}}(0) &=&
-
+$\Rightarrow & T_{x_{0}}(0) &=&$ undsoweiter
+\end{array}
 
 
