Kleiner Test für Kompabilität (neues OS)

--- a/main.tex
+++ b/main.tex
@@ -8,23 +8,23 @@
 \usepackage{fancyhdr}	                          %Titelblatt
 \usepackage{graphicx}	                          %Bilder einf"ugen
 \usepackage[listings,skins,breakable]{tcolorbox}
-\usepackage{tikz,pgf}                               %Grafiken zeichnen
+\usepackage{tikz,pgf}                           %Grafiken zeichnen
 \usepackage{mdframed}	                          %Box			%\begin{mdframed} 		und			%\end{mdframed}
 \usepackage{epstopdf}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
 \usepackage{tabu}                               %Bessere Tabellen
 \usepackage{esvect}
-\usepackage{listings}                           %f"ur Pseudocode/Code
+\usepackage{listings}                           %für Pseudocode/Code
 \usepackage{color}                              %und dessen Einf"arbung
 \usepackage{booktabs}
-\usepackage{enumitem} %angepasstes enumerieren
-\usepackage{enumerate} % Zeichen der Enumerierung beliebig w"ahlen k"onnen
+\usepackage{enumitem}                           %angepasstes enumerieren
+\usepackage{enumerate}                          %Zeichen der Enumerierung beliebig wählbar
 \usepackage{hyperref}
-\usepackage[makeroom]{cancel}        % Durchgestrichene Terme mit \cancel{}
+\usepackage[makeroom]{cancel}                   %Durchgestrichene Terme mit \cancel{}
 \usetikzlibrary{arrows}
-\usepackage{tkz-tab} % f"ur Monotonietabellen??
-\usepackage{marvosym} %Symbole wie Blitze und co. ... 
+\usepackage{tkz-tab}                            %für Monotonietabellen??
+\usepackage{marvosym}                           %Symbole wie Blitze und co. ...
 
 \pagestyle{fancy}
 \fancyhead{}
@@ -33,7 +33,7 @@
 \fancyhead[R]{Skript SMP}
 \fancyfoot[C]{\thepage}
 \parindent 0ex
-\nonstopmode                                    %Fehler bei Kompilierung werden "leise" gestellt (weniger umst"andlich)
+\nonstopmode                                    %Fehler bei Kompilierung werden "leise" gestellt (sehr viel praktischer)
 
 
 %Zahlenmengen-darstellung:
