--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -26,8 +26,8 @@ Seien $a$ und $b$ aus $\R$, sowie $n$ und $m$ aus $\N$, dann gilt:
 \item$a^{-n}=\dfrac{1}{a^n}$
 \item$\dfrac{a^n}{a^m}=a^{n-m}$
 \item$\left(\dfrac{a}{b}\right)^n=\dfrac{a^n}{b^n}$
-\item $a^{\dfrac{1}{n}}=\sqrt[n]{a}$
-\item$a^{\dfrac{m}{n}}=\sqrt[n]{a^m}$
+\item $a^{\frac{1}{n}}=\sqrt[n]{a}$
+\item$a^{\frac{m}{n}}=\sqrt[n]{a^m}$
 \end {minipage}
 \end{enumerate}
 
