--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -833,7 +833,7 @@
             einsetzen)} \\ \text{einen Punkt $\textcolor{blue}{Q}$ von $E$ ermitteln}$
             \item \label{paramtonorm} $\text{$\textcolor{red}{\vv{n}}$ mittels Kreuzprodukt ermitteln } \land \text{ Stützpunkt $\textcolor{blue}{P}$
             als Punkt $\textcolor{blue}{Q}$ einsetzen}$
-            \item \label{normtoparam} Zwei Punkte $U,V \no \equiv \textcolor{blue}{Q}$ von $E$ ermitteln $\land \text{ $\textcolor{blue}{Q}$ als
+            \item \label{normtoparam} Zwei Punkte $U,V \not\equiv \textcolor{blue}{Q}$ von $E$ ermitteln $\land \text{ $\textcolor{blue}{Q}$ als
             Stützpunkt $P$ } \land \text{ $(\vv{u} - \textcolor{blue}{\vv{q}})$ und $(\vv{v} - \textcolor{blue}{\vv{q}})$ als} \\ \text{Spannvektoren
             einsetzen}$
             \item Siehe \ref{normtoparam} (gleiches Prinzip)
