--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -42,7 +42,7 @@ Bei einem unbestimmten Integral erhält man als Lösung eine Funktion, eine soge
   =\left[F(x)\right]_a^b
 \end{equation}
 Dies ist der \textbf{Hauptsatz der Differential- und Integralrechnung}. Mit
-ihm wird das Problem der Integration auf das Auf"|finden einer Stammfunktion
+ihm wird das Problem der Integration auf das Auffinden einer Stammfunktion
 zurückgeführt. Als Mathematiker müsste man noch anfügen, dass diese Beziehung
 nicht immer gilt, sondern nur unter gewissen Voraussetzungen.
 
