--- a/kap15/kap15.tex
+++ b/kap15/kap15.tex
@@ -1,3 +1,3 @@
-\chapter{Albebra}
-
-    \section{Mengenalgebra}
+\chapter{ANHANG: Physik}
+\section{Interaction gravitationelle}
+\section{Interaction électromagnétique}
