--- a/kap14/kap14.tex
+++ b/kap14/kap14.tex
@@ -1,3 +1,3 @@
-\chapter{ANHANG: Physik}
-\section{Interaction gravitationelle}
-\section{Interaction électromagnétique}
+\chapter{Albebra}
+
+    \section{Mengenalgebra}
